--- a/app/html/about.html
+++ b/app/html/about.html
@@ -105,7 +105,7 @@
         An error occurred while checking for updates.
     </div>
     <div ng-show="upToDate" class="alert alert-success">
-        You are using latest and greatest version of Prepros App.
+        You are using the latest and greatest version of Prepros App.
     </div>
 
 </div>
