--- a/app/app.html
+++ b/app/app.html
@@ -66,9 +66,9 @@
     <div class="controls">
         <a ng-href="#/home" class="icomoon-home" tooltip="Go to home" data-placement="bottom"></a>
         <a class="love icomoon-heart-2" tooltip="Help the author" data-placement="bottom"></a>
-        <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom"></a>
-        <a class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom"></a>
-        <a class="options icomoon-cog " tooltip="App Options" data-placement="bottom"></a>
+        <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom" open-about-window></a>
+        <a class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom" open-log-window></a>
+        <a class="options icomoon-cog " tooltip="App Options" data-placement="bottom" open-options-window></a>
         <a class="to-tray icomoon-arrow-down-right-3" tooltip="Minimize to taskbar" data-placement="bottom"></a>
         <a class="minimize-app icomoon-minus" tooltip="Minimize" data-placement="bottom"></a>
         <a class="close-app icomoon-close" tooltip="Close" data-placement="left"></a>
