--- a/app/html/notification.html
+++ b/app/html/notification.html
@@ -9,7 +9,7 @@
     <script>
         function NotificationCtrl($scope){
 
-            var nwWindow = require('nw.gui').Window.get()
+            var nwWindow = require('nw.gui').Window.get();
             nwWindow.show();
             nwWindow.focus();
             nwWindow.setAlwaysOnTop(true);
