Moving devtools to head
Moved devtools to head so it can be opened even if app fails to load.
Fixed some copy pasted comments.

--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <title>Prepros App</title>
 
+    <script>
+
+        //Devtools for development mode; remove this code from production app
+        window.addEventListener('keydown', function (e) {
+            if (e.keyIdentifier === 'F12') {
+                require('nw.gui').Window.get().showDevTools();
+            }
+        });
+
+    </script>
 
     <!--Load App styles -->
     <link href="assets/css/style.css" rel="stylesheet">
