--- a/app/html/about.html
+++ b/app/html/about.html
@@ -96,7 +96,7 @@
     </p>
 
     <div ng-show="update.available" class="alert alert-info">
-        New version {{update.version}} released on {{update.date}} is available. Visit <a ng-click="go()" style="cursor: pointer;">http://alphapixels.com/prepros</a> to download.
+        New version {{update.version}} released on {{update.date}} is available, visit <a ng-click="go()" style="cursor: pointer;">http://alphapixels.com/prepros</a> to download.
     </div>
     <div ng-show="checkingUpdate" class="alert alert-info">
         Checking for updates.
