--- a/app/app.html
+++ b/app/app.html
@@ -44,7 +44,7 @@
 
 </head>
 <body>
-<div class="wrapper clearfix" ng-controller="AppCtrl" drop-target>
+<div class="wrapper clearfix" ng-controller="AppCtrl" x-drop-target>
 
 <!-- Sidebar -->
 <div class="sidebar">
@@ -55,14 +55,14 @@
         </li>
     </ul>
     <div class="controls" ng-class="{'show' : selectedProject.id}">
-        <div class="new-project icomoon-plus icons" tooltip="Add new project" add-project></div>
-        <div class="refresh icomoon-spinner-2 icons" tooltip="Refresh Files"
-             refresh-project-files="{{selectedProject.id}}"></div>
-        <div class="options icomoon-cog icons" tooltip="Project Options" show-project-options></div>
-        <div class="open icomoon-globe icons" tooltip="Open project live url"
-             open-live-url="{{selectedProject.id}}"></div>
-        <div class="remove icomoon-remove icons" tooltip="Remove project"
-             remove-project="{{selectedProject.id}}"></div>
+        <div class="new-project icomoon-plus icons" x-tooltip="Add new project" x-add-project></div>
+        <div class="refresh icomoon-spinner-2 icons" x-tooltip="Refresh Files"
+             x-refresh-project-files="{{selectedProject.id}}"></div>
+        <div class="options icomoon-cog icons" x-tooltip="Project Options" x-show-project-options></div>
+        <div class="open icomoon-globe icons" x-tooltip="Open project live url"
+             x-open-live-url="{{selectedProject.id}}"></div>
+        <div class="remove icomoon-remove icons" x-tooltip="Remove project"
+             x-remove-project="{{selectedProject.id}}"></div>
     </div>
 
 </div>
@@ -74,14 +74,14 @@
 <!-- App title bar -->
 <div class="title-bar">
     <div class="controls">
-        <a ng-href="#/home" class="icomoon-home" tooltip="Go to home" data-placement="bottom"></a>
-        <a class="love icomoon-heart-2" tooltip="Help the author" data-placement="bottom"></a>
-        <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom" open-about-window></a>
-        <a class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom" open-log-window></a>
-        <a class="options icomoon-cog " tooltip="App Options" data-placement="bottom" open-options-window></a>
-        <a class="to-tray icomoon-arrow-down-right-3" tooltip="Minimize to Tray" data-placement="bottom"></a>
-        <a class="minimize-app icomoon-minus" tooltip="Minimize" data-placement="bottom"></a>
-        <a class="close-app icomoon-close" tooltip="Close" data-placement="left"></a>
+        <a ng-href="#/home" class="icomoon-home" x-tooltip="Go to home" data-placement="bottom"></a>
+        <a class="love icomoon-heart-2" x-tooltip="Help the author" data-placement="bottom"></a>
+        <a class="about icomoon-info " x-tooltip="About Prepros" data-placement="bottom" x-open-about-window></a>
+        <a class="log icomoon-copy-2" x-tooltip="App Log" data-placement="bottom" x-open-log-window></a>
+        <a class="options icomoon-cog " x-tooltip="App Options" data-placement="bottom" x-open-options-window></a>
+        <a class="to-tray icomoon-arrow-down-right-3" x-tooltip="Minimize to Tray" data-placement="bottom"></a>
+        <a class="minimize-app icomoon-minus" x-tooltip="Minimize" data-placement="bottom"></a>
+        <a class="close-app icomoon-close" x-tooltip="Close" data-placement="left"></a>
     </div>
 </div>
 
@@ -106,7 +106,7 @@
             <input type="text" ng-model="selectedProject.config.customServerUrl">
         </label>
     </div>
-    <button save-project-options>Ok</button>
+    <button x-save-project-options>Ok</button>
 </div>
 
 
@@ -135,8 +135,8 @@
                             <div class="details clearfix">
                                 <span class="name">{{file.name}}</span>
                                 <span class="input">{{file.shortInput}}</span>
-                                <span class="output" change-file-output="{{file.id}}"
-                                      tooltip="Click to change file output path">
+                                <span class="output" x-change-file-output="{{file.id}}"
+                                      x-tooltip="Click to change file output path">
                                     &rarr; {{file.shortOutput}}
                                 </span>
                             </div>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
 
-                    <button class="compile" compile="{{selectedFile.id}}"> Compile</button>
+                    <button class="compile" x-compile="{{selectedFile.id}}"> Compile</button>
 
                 </div>
             </div>
