--- a/app/app.html
+++ b/app/app.html
@@ -23,6 +23,7 @@
     <script src="scripts/lib/angular.js"></script>
     <script src="scripts/lib/underscore.js"></script>
     <script src="scripts/lib/bootstrap.js"></script>
+    <script src="scripts/lib/mousetrap.js"></script>
 
     <!--Load custom script -->
     <script src="scripts/frame.js"></script>
