Basic app navigation using keyboard.

--- a/app/app.html
+++ b/app/app.html
@@ -75,7 +75,7 @@
 <!-- App title bar -->
 <div class="title-bar">
     <div class="controls">
-        <a ng-href="#/home" class="icomoon-home" x-tooltip="Go to home" data-placement="bottom"></a>
+        <a ng-href="#/home" class="icomoon-home" x-tooltip="Go to home" data-placement="bottom" tabindex="-1"></a>
         <a class="love icomoon-heart-2" x-tooltip="Help the author" data-placement="bottom"></a>
         <a class="about icomoon-info " x-tooltip="About Prepros" data-placement="bottom" x-open-about-window></a>
         <a class="log icomoon-copy-2" x-tooltip="App Log" data-placement="bottom" x-open-log-window></a>
