--- a/app/app.html
+++ b/app/app.html
@@ -223,6 +223,11 @@
                             </label>
 
                             <label>
+                                <input type="checkbox" ng-model="selectedFile.config.bourbon">
+                                <span class="label-desc">Use Bourbon</span>
+                            </label>
+
+                            <label>
                                 <span class="label-desc">Output Style</span>
                                 <select ng-model="selectedFile.config.outputStyle">
                                     <option value="compressed">Compressed</option>
