Refactor Imports Visitor

--- a/app/app.html
+++ b/app/app.html
@@ -39,6 +39,7 @@
     <script src="scripts/services/liveRefresh.js"></script>
     <script src="scripts/services/notification.js"></script>
     <script src="scripts/services/projectsManager.js"></script>
+    <script src="scripts/services/importsVisitor.js"></script>
     <script src="scripts/services/storage.js"></script>
     <script src="scripts/services/utils.js"></script>
 
