New Options Panel and Refactor File Types

--- a/app/app.html
+++ b/app/app.html
@@ -35,13 +35,22 @@
     <script src="scripts/services/watcher.js"></script>
     <script src="scripts/services/compiler.js"></script>
     <script src="scripts/services/config.js"></script>
-    <script src="scripts/services/fileTypes.js"></script>
     <script src="scripts/services/liveRefresh.js"></script>
     <script src="scripts/services/notification.js"></script>
     <script src="scripts/services/projectsManager.js"></script>
     <script src="scripts/services/importsVisitor.js"></script>
     <script src="scripts/services/storage.js"></script>
     <script src="scripts/services/utils.js"></script>
+
+    <!-- File Types -->
+    <script src="scripts/services/fileTypes.js"></script>
+    <script src="scripts/services/fileTypes/less.js"></script>
+    <script src="scripts/services/fileTypes/sass.js"></script>
+    <script src="scripts/services/fileTypes/stylus.js"></script>
+    <script src="scripts/services/fileTypes/markdown.js"></script>
+    <script src="scripts/services/fileTypes/coffee.js"></script>
+    <script src="scripts/services/fileTypes/jade.js"></script>
+    <script src="scripts/services/fileTypes/haml.js"></script>
 
     <!-- Filters -->
     <script src="scripts/filters/project.js"></script>
