Fix online update url

--- a/app/html/about.html
+++ b/app/html/about.html
@@ -30,7 +30,7 @@
                 cache: false
             });
 
-            $.getJSON($scope.config.updateFileUrl)
+            $.getJSON($scope.config.online.updateFileUrl)
                     .done(function(data) {
 
                         if($scope.config.version != data[0].version){
