--- a/app/html/log.html
+++ b/app/html/log.html
@@ -34,7 +34,7 @@
 
     </script>
 </head>
-<body>
+<body style="overflow: auto">
 <div ng-controller="LogCtrl" class="preprosLog">
     <h1>Prepros Log</h1>
     <ul class="unstyled">
