sass compact output style option

--- a/app/app.html
+++ b/app/app.html
@@ -214,6 +214,7 @@
                                 <span class="label-desc">Output Style</span>
                                 <select ng-model="selectedFile.config.outputStyle">
                                     <option value="compressed">Compressed</option>
+                                    <option value="compact">Compact</option>
                                     <option value="nested">Nested</option>
                                     <option value="expanded">Expanded</option>
                                 </select>
@@ -237,6 +238,7 @@
                                 <span class="label-desc">Output Style</span>
                                 <select ng-model="selectedFile.config.outputStyle">
                                     <option value="compressed">Compressed</option>
+                                    <option value="compact">Compact</option>
                                     <option value="nested">Nested</option>
                                     <option value="expanded">Expanded</option>
                                 </select>
