--- a/app/html/options.html
+++ b/app/html/options.html
@@ -93,6 +93,7 @@
                 <span class="label-desc">Output Style</span><br>
                 <select ng-model="userConfig.scss.outputStyle">
                     <option value="compressed">Compressed</option>
+                    <option value="compact">Compact</option>
                     <option value="nested">Nested</option>
                     <option value="expanded">Expanded</option>
                 </select>
@@ -118,6 +119,7 @@
                 <span class="label-desc">Output Style</span><br>
                 <select ng-model="userConfig.sass.outputStyle">
                     <option value="compressed">Compressed</option>
+                    <option value="compact">Compact</option>
                     <option value="nested">Nested</option>
                     <option value="expanded">Expanded</option>
                 </select>
